fixing height on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,8 @@
 
 .Background {
   background-color: #302C2D;
-  height:100vh;
+  /* height:100%; */
+  min-height: 1313px;
   display:flex;
   justify-content: center;
   /* display: grid;
@@ -65,5 +66,3 @@
   font-family: minecraftia;
   src: url(/public/minecraftia.ttf);
 }
-
-
